--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-PORT = 3001
+PORT = https://fineart-mern-app-api.onrender.com
 
 DATABASE = mongodb+srv://inrongpon22:AsusGTX650@cluster0.xavusuu.mongodb.net/fineart?retryWrites=true&w=majority
 
